# GameKU

./: .gitignore  AUDIT_REPORT.md  MAINTENANCE_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  build.js  check.js  jalan.py  kill-port.js  package-lock.json  package.json
backend/: app.js  package-lock.json  package.json  server.js
backend/api/config/: firebase.js
backend/api/controllers/: adminController.js  authController.js  bannerController.js  categoryController.js  gameController.js  homeController.js  promoController.js  resellerController.js  searchController.js  voucherController.js
backend/api/helpers/: storageHelper.js
backend/api/middleware/: authMiddleware.js  index.js  roleMiddleware.js  secureCookie.js  securityMiddleware.js  uploadMiddleware.js
backend/api/routes/: admin.js  auth.js  banner.js  category.js  game.js  home.js  promo.js  reseller.js  search.js  upload.js  (+1 more)
backend/models/: Banner.js  Inventory.js  InventoryLog.js  Order.js  Product.js  ProductCategory.js  ProductImage.js  ProductTag.js  ProductView.js  Promo.js  Reseller.js  SalesHistory.js  SearchIndex.js  SellerStatistics.js  User.js  Voucher.js  Wishlist.js  index.js
backend/public/: gambar  index.html
backend/src/: FIREBASE_IMPLEMENTATION_GUIDE.md  index.js
fastapi/: FIREBASE_IMPLEMENTATION.md  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: AUTH_DOCUMENTATION.md  App.jsx  main.jsx  router.jsx
security-service/: gameku-security-service.cabal  stack.yaml
security-service/src/: App.hs  Config.hs  Main.hs  Middleware.hs  Routes.hs  Types.hs  Utils.hs
security-service/src/Database/: MongoDB.hs
security-service/src/Repositories/: AuditRepository.hs  GameRepository.hs  NonceRepository.hs  RateLimitRepository.hs  UserRepository.hs
security-service/src/Services/: Audit.hs  Fraud.hs  Signature.hs  Validation.hs
security-service/src/api/: endpoints.dhall
security-service/src/models/: security_models.dhall
setup/: AUTH_FLOW.txt  BACKEND_CONFIGURATION.txt  FIREBASE_NOTE.txt  PAYMENT_NOTE.txt  SECURITY_AUDIT.md  SECURITY_INTEGRATION_GUIDE.md
(+129 files in other folders)
