-- gameku-security-service.cabal - Cabal file untuk Security Service
name:                gameku-security-service
version:             0.1.0.0
synopsis:            Security Service untuk GameKU
description:         Service keamanan terpisah yang menangani validasi, signature, encryption, dan anti fraud
license:             MIT
author:              GameKU Team
maintainer:          team@gameku.com
category:            Security
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       src
                       src/Services
                       src/Repositories
                       src/Database
                       src/Routes
                       src/Types
                       src/Utils
                       src/Middleware
  exposed-modules:      Main
                        Config
                        Types
                        Utils
                        Middleware
                        Routes
                        Services.Signature
                        Services.Validation
                        Services.Audit
                        Services.Fraud
                        Database.MongoDB
                        Repositories.UserRepository
                        Repositories.GameRepository
                        Repositories.NonceRepository
                        Repositories.AuditRepository
                        Repositories.RateLimitRepository
  other-modules:        App
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                       , scotty >= 0.20
                       , wai >= 3.2
                       , wai-extra >= 3.0
                       , aeson >= 2.0
                       , cryptonite >= 0.30
                       , memory >= 0.18
                       , mongoDB >= 2.7
                       , wreq >= 0.5
                       , uuid >= 1.3
                       , dotenv >= 0.8
                       , time >= 1.10
                       , hspec >= 2.10